--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@matriarx/theme-react",
   "version": "0.0.1",
-  "description": "Theme ~ React",
+  "description": "A theme project for React",
   "keywords": [
     "mia",
     "matriarx",
@@ -70,8 +70,8 @@
     "build": "swc src -d lib --copy-files",
     "dev": "swc src -d lib --copy-files -w",
     "review": "tsc --noEmit",
-    "lint": "eslint --fix '{src,tests}/**/*.ts' --color --debug --no-error-on-unmatched-pattern",
-    "style": "prettier --write '{src,tests}/**/*.ts' --loglevel log --no-error-on-unmatched-pattern",
+    "lint": "eslint --fix '{src,tests}/**/*.{ts,tsx}' --color --debug --no-error-on-unmatched-pattern",
+    "style": "prettier --write '{src,tests}/**/*.{ts,tsx}' --loglevel log --no-error-on-unmatched-pattern",
     "test": "jest --config .jestrc.json --colors --passWithNoTests",
     "qa": "npm run review && npm run lint && npm run style && npm test",
     "type": "tsc --project typescript.json --emitDeclarationOnly",
